tests/ui/discord-frontend/entity_macro/expected_literal_13.stderr
error: unexpected end of input, expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_13.rs:40:44
   |
LL |     relates = [multiple "MemberEntity": via]
   |                                            ^

error: aborting due to 1 previous error

